--- a/client/package.json
+++ b/client/package.json
@@ -36,6 +36,7 @@
     "react-scripts": "^5.0.1",
     "react-slick": "^0.30.2",
     "react-spring": "^9.7.3",
+    "react-stars": "^2.2.5",
     "react-toastify": "^10.0.5",
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
